# ChangeLog for sys-apps/ucspi-tcp
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/ucspi-tcp/ChangeLog,v 1.55 2007/02/18 21:07:18 grobian Exp $

  18 Feb 2007; Fabian Groffen <grobian@gentoo.org>
  ucspi-tcp-0.88-r14.ebuild, ucspi-tcp-0.88-r15.ebuild,
  ucspi-tcp-0.88-r16.ebuild:
  Dropped ppc-macos keyword, see you in prefix

*ucspi-tcp-0.88-r16 (15 Jan 2007)

  15 Jan 2007; Michael Hanselmann <hansmi@gentoo.org>
  +ucspi-tcp-0.88-r16.ebuild:
  Drop IPv6 and SSL patches, add support for UCSPI_TCP_PATCH_DIR variable
  instead. General cleanup.

  16 Oct 2006; Markus Rothe <corsair@gentoo.org> ucspi-tcp-0.88-r15.ebuild:
  Stable on ppc64

  13 Oct 2006; Michael Hanselmann <hansmi@gentoo.org>
  -ucspi-tcp-0.88-r10.ebuild, ucspi-tcp-0.88-r15.ebuild:
  Stable on hppa, mips, ppc, sparc, x86. Remove old version.

  29 Sep 2006; Thomas Cort <tcort@gentoo.org> ucspi-tcp-0.88-r14.ebuild:
  Stable on alpha wrt Bug #131785.

  12 Jul 2006; Aron Griffis <agriffis@gentoo.org> ucspi-tcp-0.88-r14.ebuild:
  Mark 0.88-r14 stable on ia64. #131785

*ucspi-tcp-0.88-r15 (31 May 2006)

  31 May 2006; Robin H. Johnson <robbat2@gentoo.org>
  +ucspi-tcp-0.88-r15.ebuild:
  New revision, fix for the 0.0.0.0: file does not exist bug.

  06 May 2006; Simon Stelling <blubb@gentoo.org> ucspi-tcp-0.88-r14.ebuild:
  stable on amd64

  01 May 2006; Fabian Groffen <grobian@gentoo.org>
  ucspi-tcp-0.88-r14.ebuild:
  Marked ppc-macos (bug #131785)

  01 May 2006; Markus Rothe <corsair@gentoo.org> ucspi-tcp-0.88-r14.ebuild:
  Stable on ppc64

  29 Apr 2006; Michael Hanselmann <hansmi@gentoo.org>
  -ucspi-tcp-0.88-r8.ebuild, -ucspi-tcp-0.88-r9.ebuild,
  -ucspi-tcp-0.88-r11.ebuild, -ucspi-tcp-0.88-r12.ebuild,
  -ucspi-tcp-0.88-r13.ebuild, ucspi-tcp-0.88-r14.ebuild:
  Stable on hppa, mips, ppc, sparc, x86. Removed old versions.

  19 Apr 2006; Robin H. Johnson <robbat2@gentoo.org>
  ucspi-tcp-0.88-r14.ebuild: