@@ -3,6 +3,6 @@ AUX 0.88-rblsmtpd-ignore-on-RELAYCLIENT.patch 462 RMD160 97cb8f2761928b585cae44e
 AUX tcprules-Makefile 168 RMD160 1feb7a1979490270bdacd56fd17801687207ad42 SHA1 d53edf0eeedd8b860bb50e5373ba9425f0cd404a SHA256 931cfb9797dc514d1fce3c43b71f59c22e929c3b12682089bf30ebdac057a1db
 DIST ucspi-rss.diff 1828 RMD160 e65f7317351f45eab70ed7b66d98e3c4b4494389 SHA1 93accc0d827f1656182956ffb215da19b6fd7d12 SHA256 5101354eb86d8e11edefd7b83df4e9c274a55b845f4cb2ce36dda912aced56f4
 DIST ucspi-tcp-0.88.tar.gz 53019 RMD160 eb20085ea6ffd5d137a805f7c8768e0312c1f56a SHA1 793b4189795b563085602c030dd8aa0d206ddc0e SHA256 4a0615cab74886f5b4f7e8fd32933a07b955536a3476d74ea087a3ea66a23e9c
-EBUILD ucspi-tcp-0.88-r16.ebuild 2328 RMD160 2515326a6721b75580038fe2466d4cd7a241b9de SHA1 b9dd2f3fb625b3853b6894df2a398edd219086e9 SHA256 b88dacdc7c1adb60e37db32c0cafb4881a008560dfc3e761c0cd45934f31f80e
-MISC ChangeLog 8121 RMD160 92f28999686fd5eac517c8a5f14ac2bcca307f25 SHA1 990bb37d4cb816b0d2a8fdb94158c14664be4917 SHA256 36a7e58431020c58a54e1cefd8e8123f8cba4e43ef1d4c9668af8fe4cc1fa38b
+EBUILD ucspi-tcp-0.88-r16.ebuild 2334 RMD160 c3fce51780ffa27b85351554979ffdfd83c80d0e SHA1 639cc279c2645594d7c73776aa7614d3d44d1bf4 SHA256 e3452c485a5bf68cd1241c8f1d2b2756a5abcf4ecdd7ba9de6b2682a1603520f
+MISC ChangeLog 8349 RMD160 48c01d24da13ecca507056264c390c8be76444b0 SHA1 410f1a57f5c08f737fde1af88380d0521138afab SHA256 7fc67e909fa6d9037dbf3b151b8bbad1263ae6c0812b950e9158d5bf308efc6a
 MISC metadata.xml 592 RMD160 55f62935ff7dc2faf84951259954a3bc51154a51 SHA1 418ead2e6c1e70d8678cd336ed1ea0ab8e50d200 SHA256 1043f71f51803b39959194265e8dc63e009634eaafe5bee91892f359ba4950f4
